Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and <a href="https://en.reddit.com/r/Monero/comments/3s80l2/why_mymonero_key_der
 <p>Everything here was done and tested on
 Ubuntu 14.04 x86_64 and Ubuntu 15.10 x86_64.</p>
 
-<p>Monero source code compilation and setup are same as <a href="https://github.com/moneroexamples/spendkey.git">here</a>.</p>
+<p>Monero source code compilation and setup are same as <a href="http://moneroexamples.github.io/access-blockchain-in-cpp/">here</a>.</p>
 
 <h1>
 <a id="c-code" class="anchor" href="#c-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>C++ code</h1>
@@ -325,7 +325,7 @@ steps can be executed:</p>
 git clone https://github.com/moneroexamples/spendkey.git
 
 <span class="pl-c"># enter the downloaded sourced code folder</span>
-<span class="pl-c1">cd</span> access-blockchain-in-cpp
+<span class="pl-c1">cd</span> spendkey
 
 <span class="pl-c"># create the makefile</span>
 cmake <span class="pl-c1">.</span>
