Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="recover-monero-address-using-the-private-spend-key" class="anchor" href="#recover-monero-address-using-the-private-spend-key" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recover Monero address using the private spend key</h1>
+<a id="recover-monero-address-using-the-private-spend-key" class="anchor" href="#recover-monero-address-using-the-private-spend-key" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recover Monero address using the private spend key</h1>
 
 <p><a href="https://getmonero.org/">Monero</a> <code>simplewallet</code> has a command called <code>spendkey</code> which prints
 out your private spend key. However, its not clear what to do with this private key.</p>
@@ -43,7 +43,7 @@ More on Monero's keys and addresses can be found on <a href="http://xmrtests.llc
 <p>This example shows how to do this in C++ using Monero libraries.</p>
 
 <h1>
-<a id="monero-address" class="anchor" href="#monero-address" aria-hidden="true"><span class="octicon octicon-link"></span></a>Monero address</h1>
+<a id="monero-address" class="anchor" href="#monero-address" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Monero address</h1>
 
 <p>Monero address is as a combination of public spend and view keys. The public keys
 are obtained directly from the corresponding private spend and view keys, respectively.
@@ -57,7 +57,7 @@ spend key is much more important than the view key, since it allows
 and <a href="https://en.reddit.com/r/Monero/comments/3s80l2/why_mymonero_key_derivation_is_different_than_for/">here</a>.</p>
 
 <h1>
-<a id="pre-requisites" class="anchor" href="#pre-requisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pre-requisites</h1>
+<a id="pre-requisites" class="anchor" href="#pre-requisites" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pre-requisites</h1>
 
 <p>Everything here was done and tested on
 Ubuntu 14.04 x86_64 and Ubuntu 15.10 x86_64.</p>
@@ -65,7 +65,7 @@ Ubuntu 14.04 x86_64 and Ubuntu 15.10 x86_64.</p>
 <p>Monero source code compilation and setup are same as <a href="http://moneroexamples.github.io/access-blockchain-in-cpp/">here</a>.</p>
 
 <h1>
-<a id="c-code" class="anchor" href="#c-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>C++ code</h1>
+<a id="c-code" class="anchor" href="#c-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>C++ code</h1>
 
 <p>The most interesting C++ file is <code>main.cpp</code>.
 Therefore, I will present only that file here. Full source code is
@@ -76,7 +76,7 @@ So for the latest version
 of this example, please check the github repository directly.</p>
 
 <h2>
-<a id="maincpp" class="anchor" href="#maincpp" aria-hidden="true"><span class="octicon octicon-link"></span></a>main.cpp</h2>
+<a id="maincpp" class="anchor" href="#maincpp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>main.cpp</h2>
 
 <p>This is the main file of the example. The program takes
 two input arguments:</p>
@@ -242,7 +242,7 @@ two input arguments:</p>
 }</pre></div>
 
 <h1>
-<a id="output-example-1" class="anchor" href="#output-example-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Output example 1</h1>
+<a id="output-example-1" class="anchor" href="#output-example-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output example 1</h1>
 
 <p>Executing the program as follows:</p>
 
@@ -266,7 +266,7 @@ Monero address   <span class="pl-c1">:</span> <span class="pl-k">&lt;</span>46HS
  <a href="http://xmrtests.llcoins.net/addresstests.html">Address Generation Tests</a> website.</p>
 
 <h1>
-<a id="output-example-2" class="anchor" href="#output-example-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Output example 2</h1>
+<a id="output-example-2" class="anchor" href="#output-example-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output example 2</h1>
 
 <p>Executing the program as follows:</p>
 
@@ -290,7 +290,7 @@ Monero address   <span class="pl-c1">:</span> <span class="pl-k">&lt;</span>435z
  <a href="http://xmrtests.llcoins.net/addresstests.html">Address Generation Tests</a> website.</p>
 
 <h1>
-<a id="output-example-3" class="anchor" href="#output-example-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Output example 3</h1>
+<a id="output-example-3" class="anchor" href="#output-example-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output example 3</h1>
 
 <p>Executing the program as follows:</p>
 
@@ -315,7 +315,7 @@ Monero address   <span class="pl-c1">:</span> <span class="pl-k">&lt;</span>46RR
  <a href="http://xmrtests.llcoins.net/addresstests.html">Address Generation Tests</a> website.</p>
 
 <h2>
-<a id="compile-this-example" class="anchor" href="#compile-this-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compile this example</h2>
+<a id="compile-this-example" class="anchor" href="#compile-this-example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Compile this example</h2>
 
 <p>The dependencies are same as those for Monero, so I assume Monero compiles
 correctly. If so then to download and compile this example, the following
@@ -337,7 +337,7 @@ make</pre></div>
 folder. How to use it, can be seen in the above example outputs.</p>
 
 <h2>
-<a id="how-can-you-help" class="anchor" href="#how-can-you-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can you help?</h2>
+<a id="how-can-you-help" class="anchor" href="#how-can-you-help" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How can you help?</h2>
 
 <p>Constructive criticism, code and website edits are always good. They can be made through github.</p>
 
